       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.36 (v0_8_36) on Linux (lb32001) on 5/22/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.36 (v0_8_36) on Linux (lb0169) on 5/22/2007 ==

2007-05-22  Brian Kahne  <bkahne@freescale.com>

	* Various tweaks to get this to compile with --disable-shared.  If
	shared objects are disabled, then we add pthread as a system
	library and we also define --allow-multiple-definition so that
	some of our symbols can replace symbols in other libraries.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.35 (v0_8_35) on Linux (lb32001) on 5/18/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.35 (v0_8_35) on Linux (lb0169) on 5/18/2007 ==

	
2007-05-18  Brian Kahne  <bkahne@freescale.com>

	* Removed the building of libgccpp.la because it caused link
	errors when linked statically against libstdc++ (it overrides new
	and delete, which causes multiply-defined-symbol errors if done
	statically).  We don't use this library, so that shouldn't be a
	problem.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb0169) on 4/4/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb32001) on 4/4/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb0169) on 4/4/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.34 (v0_8_34) on Linux (lb32001) on 4/4/2007 ==

2007-04-04  Brian Kahne  <bkahne@freescale.com>

	* Fixed a bug in Program::LineNumber.  It was incorrectly looking
	at string contents, so a string that contained something that
	looked like a line number would be counted as a line number.
	Added parsing/in10.C to test this.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb32001) on 4/3/2007 ==
