@@ -1,3 +1,12 @@
+2007-06-28  Brian Kahne  <bkahne@freescale.com>
+
+	* Fixed some distribution problems:  We weren't distributing
+	QuickThread files needed for building on x86_64.
+
+	* Fatal encoding errors now throw a runtime_error with a message,
+	rather than using the error log, so that the entire error can be
+	squashed if not relevant to the user.
+
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.36 (v0_8_36) on Linux (lb32001) on 5/22/2007 ==
 
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.36 (v0_8_36) on Linux (lb0169) on 5/22/2007 ==
